# shonfeder_net

./: .gitignore  Caddyfile  Makefile  PROJECT.org  PROJECT.org_archive  README.org  dune-project  run-watch.sh  server.pl  shonfeder_net.install  shonfeder_net.opam  shonfeder_net.opam.template  shonfeder_net_cicd.opam
assets/styles/: style.css
lib/: .merlin  config.ml  content.ml  content.mli  dune  html_utils.ml  template.ml  template.mli
md/: home.md
old_site/assets/js/: basic.js
old_site/md/: home.md
site/assets/: error.html
site/assets/.well-known/: keybase.txt
site/assets/js/: script.js
site/assets/styles/: style.css
site/md/: home.md  posts.md  programs.md  projects.md  resume.md
test/: .merlin  dune
